[gd_scene load_steps=31 format=2]

[ext_resource path="res://entities/UCL/CreateNewLevel/CreateUCLController.gd" type="Script" id=1]
[ext_resource path="res://images/background.jpg" type="Texture" id=2]
[ext_resource path="res://images/logo_small.png" type="Texture" id=3]
[ext_resource path="res://fonts/OpenSans_Normal.tres" type="DynamicFont" id=4]
[ext_resource path="res://images/createUCLNext.png" type="Texture" id=5]
[ext_resource path="res://entities/UCL/CreateNewLevel/questions.tres" type="ButtonGroup" id=6]
[ext_resource path="res://images/inactive1.png" type="Texture" id=7]
[ext_resource path="res://images/inactive2.png" type="Texture" id=8]
[ext_resource path="res://images/inactive3.png" type="Texture" id=9]
[ext_resource path="res://images/inactive4.png" type="Texture" id=10]
[ext_resource path="res://images/inactive5.png" type="Texture" id=11]
[ext_resource path="res://images/createUCL.png" type="Texture" id=12]
[ext_resource path="res://images/modal_box.png" type="Texture" id=13]
[ext_resource path="res://entities/UCL/CreateNewLevel/popup.gd" type="Script" id=14]
[ext_resource path="res://images/close_button.png" type="Texture" id=15]
[ext_resource path="res://entities/UCL/CreateNewLevel/question1.gd" type="Script" id=16]
[ext_resource path="res://entities/UCL/CreateNewLevel/q1option.tres" type="ButtonGroup" id=17]
[ext_resource path="res://images/unchecked.png" type="Texture" id=18]
[ext_resource path="res://images/checked.png" type="Texture" id=19]
[ext_resource path="res://entities/UCL/CreateNewLevel/question2.gd" type="Script" id=20]
[ext_resource path="res://entities/UCL/CreateNewLevel/q2option.tres" type="ButtonGroup" id=21]
[ext_resource path="res://entities/UCL/CreateNewLevel/question3.gd" type="Script" id=22]
[ext_resource path="res://entities/UCL/CreateNewLevel/q3option.tres" type="ButtonGroup" id=23]
[ext_resource path="res://entities/UCL/CreateNewLevel/question4.gd" type="Script" id=24]
[ext_resource path="res://entities/UCL/CreateNewLevel/q4option.tres" type="ButtonGroup" id=25]
[ext_resource path="res://entities/UCL/CreateNewLevel/question5.gd" type="Script" id=26]
[ext_resource path="res://entities/UCL/CreateNewLevel/createSuccess.gd" type="Script" id=27]
[ext_resource path="res://images/button_done.png" type="Texture" id=28]
[ext_resource path="res://entities/UCL/CreateNewLevel/createFail.gd" type="Script" id=29]
[ext_resource path="res://images/frames/loading/Loading.tres" type="SpriteFrames" id=30]

[node name="CreateNewLevelView" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 511.918, 300.609 )
scale = Vector2( 0.853, 0.501 )
texture = ExtResource( 2 )

[node name="LearnEZ" type="Sprite" parent="."]
position = Vector2( 147.77, 63.841 )
scale = Vector2( 0.824, 0.824 )
texture = ExtResource( 3 )

[node name="header" type="RichTextLabel" parent="."]
margin_left = 392.33
margin_top = 74.02
margin_right = 937.33
margin_bottom = 158.02
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "USER CREATED LEVEL"

[node name="enterLevel" type="RichTextLabel" parent="."]
margin_left = 80.0
margin_top = 185.0
margin_right = 564.0
margin_bottom = 260.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Level Name:"

[node name="enterDesc" type="RichTextLabel" parent="."]
margin_left = 80.0
margin_top = 279.0
margin_right = 952.0
margin_bottom = 367.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Level Desciption:"

[node name="uclDesc" type="TextEdit" parent="."]
margin_left = 80.0
margin_top = 315.0
margin_right = 943.0
margin_bottom = 495.0
wrap_enabled = true

[node name="uclLevel" type="LineEdit" parent="."]
margin_left = 80.0
margin_top = 220.0
margin_right = 943.0
margin_bottom = 261.0

[node name="nextStep" type="TouchScreenButton" parent="."]
position = Vector2( 771.627, 518.45 )
normal = ExtResource( 5 )

[node name="Q1" type="TextureButton" parent="."]
margin_left = 400.0
margin_top = 520.0
margin_right = 440.0
margin_bottom = 560.0
group = ExtResource( 6 )
texture_normal = ExtResource( 7 )

[node name="Q2" type="TextureButton" parent="."]
margin_left = 450.0
margin_top = 520.0
margin_right = 490.0
margin_bottom = 560.0
group = ExtResource( 6 )
texture_normal = ExtResource( 8 )

[node name="Q3" type="TextureButton" parent="."]
margin_left = 500.0
margin_top = 520.0
margin_right = 540.0
margin_bottom = 560.0
group = ExtResource( 6 )
texture_normal = ExtResource( 9 )

[node name="Q4" type="TextureButton" parent="."]
margin_left = 550.0
margin_top = 520.0
margin_right = 590.0
margin_bottom = 560.0
group = ExtResource( 6 )
texture_normal = ExtResource( 10 )

[node name="Q5" type="TextureButton" parent="."]
margin_left = 600.0
margin_top = 520.0
margin_right = 640.0
margin_bottom = 560.0
group = ExtResource( 6 )
texture_normal = ExtResource( 11 )

[node name="enterAnswer" type="RichTextLabel" parent="."]
margin_left = 80.0
margin_top = 278.0
margin_right = 1139.0
margin_bottom = 426.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Answer (Choose the correct answer):
"

[node name="create" type="TouchScreenButton" parent="."]
position = Vector2( 774.785, 148.976 )
scale = Vector2( 1.53685, 1 )
normal = ExtResource( 12 )

[node name="errorPopup" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 557.293, 309.314 )
scale = Vector2( 1.05256, 0.795928 )
z_index = 1
texture = ExtResource( 13 )
script = ExtResource( 14 )

[node name="closeButton" type="TouchScreenButton" parent="errorPopup"]
position = Vector2( 231.299, -108.221 )
scale = Vector2( 0.313611, 0.425074 )
normal = ExtResource( 15 )

[node name="RichTextLabel" type="RichTextLabel" parent="errorPopup"]
margin_left = -182.129
margin_top = -23.8173
margin_right = 625.871
margin_bottom = 195.183
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Missing Fields and/or Answer(s)
"

[node name="questionContainer" type="Container" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="question1" type="Container" parent="questionContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 16 )

[node name="questionTitle" type="LineEdit" parent="questionContainer/question1"]
margin_left = 80.0
margin_top = 220.0
margin_right = 943.0
margin_bottom = 261.0

[node name="ans1" type="TextEdit" parent="questionContainer/question1"]
margin_left = 130.0
margin_top = 325.0
margin_right = 480.0
margin_bottom = 375.0
wrap_enabled = true

[node name="ans2" type="TextEdit" parent="questionContainer/question1"]
margin_left = 595.0
margin_top = 325.0
margin_right = 945.0
margin_bottom = 375.0
wrap_enabled = true

[node name="ans3" type="TextEdit" parent="questionContainer/question1"]
margin_left = 130.0
margin_top = 420.0
margin_right = 480.0
margin_bottom = 470.0
wrap_enabled = true

[node name="ans4" type="TextEdit" parent="questionContainer/question1"]
margin_left = 595.0
margin_top = 420.0
margin_right = 945.0
margin_bottom = 470.0
wrap_enabled = true

[node name="option1" type="TextureButton" parent="questionContainer/question1"]
margin_left = 80.0
margin_top = 325.0
margin_right = 126.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 17 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option2" type="TextureButton" parent="questionContainer/question1"]
margin_left = 540.0
margin_top = 325.0
margin_right = 586.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 17 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option3" type="TextureButton" parent="questionContainer/question1"]
margin_left = 80.0
margin_top = 420.0
margin_right = 126.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 17 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option4" type="TextureButton" parent="questionContainer/question1"]
margin_left = 540.0
margin_top = 420.0
margin_right = 586.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 17 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="enterQuestion1" type="RichTextLabel" parent="questionContainer/question1"]
margin_left = 80.0
margin_top = 185.0
margin_right = 564.0
margin_bottom = 260.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Question 1:"

[node name="question2" type="Container" parent="questionContainer"]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 20 )

[node name="questionTitle" type="LineEdit" parent="questionContainer/question2"]
margin_left = 80.0
margin_top = 220.0
margin_right = 943.0
margin_bottom = 261.0

[node name="ans1" type="TextEdit" parent="questionContainer/question2"]
margin_left = 130.0
margin_top = 325.0
margin_right = 480.0
margin_bottom = 375.0
wrap_enabled = true

[node name="ans2" type="TextEdit" parent="questionContainer/question2"]
margin_left = 595.0
margin_top = 325.0
margin_right = 945.0
margin_bottom = 375.0
wrap_enabled = true

[node name="ans3" type="TextEdit" parent="questionContainer/question2"]
margin_left = 130.0
margin_top = 420.0
margin_right = 480.0
margin_bottom = 470.0
wrap_enabled = true

[node name="ans4" type="TextEdit" parent="questionContainer/question2"]
margin_left = 595.0
margin_top = 420.0
margin_right = 945.0
margin_bottom = 470.0
wrap_enabled = true

[node name="option1" type="TextureButton" parent="questionContainer/question2"]
margin_left = 80.0
margin_top = 325.0
margin_right = 126.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 21 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option2" type="TextureButton" parent="questionContainer/question2"]
margin_left = 540.0
margin_top = 325.0
margin_right = 586.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 21 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option3" type="TextureButton" parent="questionContainer/question2"]
margin_left = 80.0
margin_top = 420.0
margin_right = 126.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 21 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option4" type="TextureButton" parent="questionContainer/question2"]
margin_left = 540.0
margin_top = 420.0
margin_right = 586.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 21 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="enterQuestion2" type="RichTextLabel" parent="questionContainer/question2"]
margin_left = 80.0
margin_top = 185.0
margin_right = 564.0
margin_bottom = 260.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Question 2:
"
scroll_active = false

[node name="question3" type="Container" parent="questionContainer"]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 22 )

[node name="questionTitle" type="LineEdit" parent="questionContainer/question3"]
margin_left = 80.0
margin_top = 220.0
margin_right = 943.0
margin_bottom = 261.0

[node name="ans1" type="TextEdit" parent="questionContainer/question3"]
margin_left = 130.0
margin_top = 325.0
margin_right = 480.0
margin_bottom = 375.0
wrap_enabled = true

[node name="ans2" type="TextEdit" parent="questionContainer/question3"]
margin_left = 595.0
margin_top = 325.0
margin_right = 945.0
margin_bottom = 375.0
wrap_enabled = true

[node name="ans3" type="TextEdit" parent="questionContainer/question3"]
margin_left = 130.0
margin_top = 420.0
margin_right = 480.0
margin_bottom = 470.0
wrap_enabled = true

[node name="ans4" type="TextEdit" parent="questionContainer/question3"]
margin_left = 595.0
margin_top = 420.0
margin_right = 945.0
margin_bottom = 470.0
wrap_enabled = true

[node name="option1" type="TextureButton" parent="questionContainer/question3"]
margin_left = 80.0
margin_top = 325.0
margin_right = 126.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 23 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option2" type="TextureButton" parent="questionContainer/question3"]
margin_left = 540.0
margin_top = 325.0
margin_right = 586.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 23 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option3" type="TextureButton" parent="questionContainer/question3"]
margin_left = 80.0
margin_top = 420.0
margin_right = 126.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 23 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option4" type="TextureButton" parent="questionContainer/question3"]
margin_left = 540.0
margin_top = 420.0
margin_right = 586.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 23 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="enterQuestion3" type="RichTextLabel" parent="questionContainer/question3"]
margin_left = 80.0
margin_top = 185.0
margin_right = 564.0
margin_bottom = 260.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Question 3:"

[node name="question4" type="Container" parent="questionContainer"]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 24 )

[node name="questionTitle" type="LineEdit" parent="questionContainer/question4"]
margin_left = 80.0
margin_top = 220.0
margin_right = 943.0
margin_bottom = 261.0

[node name="ans1" type="TextEdit" parent="questionContainer/question4"]
margin_left = 130.0
margin_top = 325.0
margin_right = 480.0
margin_bottom = 375.0
wrap_enabled = true

[node name="ans2" type="TextEdit" parent="questionContainer/question4"]
margin_left = 595.0
margin_top = 325.0
margin_right = 945.0
margin_bottom = 375.0
wrap_enabled = true

[node name="ans3" type="TextEdit" parent="questionContainer/question4"]
margin_left = 130.0
margin_top = 420.0
margin_right = 480.0
margin_bottom = 470.0
wrap_enabled = true

[node name="ans4" type="TextEdit" parent="questionContainer/question4"]
margin_left = 595.0
margin_top = 420.0
margin_right = 945.0
margin_bottom = 470.0
wrap_enabled = true

[node name="option1" type="TextureButton" parent="questionContainer/question4"]
margin_left = 80.0
margin_top = 325.0
margin_right = 126.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 25 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option2" type="TextureButton" parent="questionContainer/question4"]
margin_left = 540.0
margin_top = 325.0
margin_right = 586.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 25 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option3" type="TextureButton" parent="questionContainer/question4"]
margin_left = 80.0
margin_top = 420.0
margin_right = 126.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 25 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option4" type="TextureButton" parent="questionContainer/question4"]
margin_left = 540.0
margin_top = 420.0
margin_right = 586.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 25 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="enterQuestion4" type="RichTextLabel" parent="questionContainer/question4"]
margin_left = 80.0
margin_top = 185.0
margin_right = 564.0
margin_bottom = 260.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Question 4:"

[node name="question5" type="Container" parent="questionContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 26 )

[node name="questionTitle" type="LineEdit" parent="questionContainer/question5"]
margin_left = 80.0
margin_top = 220.0
margin_right = 943.0
margin_bottom = 261.0

[node name="ans1" type="TextEdit" parent="questionContainer/question5"]
margin_left = 130.0
margin_top = 325.0
margin_right = 480.0
margin_bottom = 375.0
wrap_enabled = true

[node name="ans2" type="TextEdit" parent="questionContainer/question5"]
margin_left = 595.0
margin_top = 325.0
margin_right = 945.0
margin_bottom = 375.0
wrap_enabled = true

[node name="ans3" type="TextEdit" parent="questionContainer/question5"]
margin_left = 130.0
margin_top = 420.0
margin_right = 480.0
margin_bottom = 470.0
wrap_enabled = true

[node name="ans4" type="TextEdit" parent="questionContainer/question5"]
margin_left = 595.0
margin_top = 420.0
margin_right = 945.0
margin_bottom = 470.0
wrap_enabled = true

[node name="option1" type="TextureButton" parent="questionContainer/question5"]
margin_left = 80.0
margin_top = 325.0
margin_right = 126.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 25 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option2" type="TextureButton" parent="questionContainer/question5"]
margin_left = 540.0
margin_top = 325.0
margin_right = 586.0
margin_bottom = 371.0
toggle_mode = true
group = ExtResource( 25 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option3" type="TextureButton" parent="questionContainer/question5"]
margin_left = 80.0
margin_top = 420.0
margin_right = 126.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 25 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="option4" type="TextureButton" parent="questionContainer/question5"]
margin_left = 540.0
margin_top = 420.0
margin_right = 586.0
margin_bottom = 466.0
toggle_mode = true
group = ExtResource( 25 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )

[node name="enterQuestion5" type="RichTextLabel" parent="questionContainer/question5"]
margin_left = 80.0
margin_top = 185.0
margin_right = 564.0
margin_bottom = 260.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Enter Question 5:"

[node name="createSuccess" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 545.5, 285 )
scale = Vector2( 1.20508, 1.05859 )
z_index = 1
texture = ExtResource( 13 )
script = ExtResource( 27 )

[node name="RichTextLabel" type="RichTextLabel" parent="createSuccess"]
margin_left = -229.47
margin_top = -58.8819
margin_right = 411.53
margin_bottom = 84.1181
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/normal_font = ExtResource( 4 )
text = "Level Created Successfully!"

[node name="close" type="TouchScreenButton" parent="createSuccess"]
position = Vector2( -80.4417, 15.8339 )
scale = Vector2( 1.61874, 1.49554 )
normal = ExtResource( 28 )

[node name="createFail" type="Sprite" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 540, 277 )
scale = Vector2( 0.835938, 0.78125 )
z_index = 1
texture = ExtResource( 13 )
script = ExtResource( 29 )

[node name="RichTextLabel" type="RichTextLabel" parent="createFail"]
margin_left = -201.075
margin_top = -83.44
margin_right = 551.925
margin_bottom = 212.56
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/normal_font = ExtResource( 4 )
text = "User Created Level Failed. Please contact the Administrator if this issue persists."

[node name="close" type="TouchScreenButton" parent="createFail"]
position = Vector2( 218.916, -117.76 )
scale = Vector2( 0.495327, 0.53 )
normal = ExtResource( 15 )

[node name="loading" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="bg" type="Sprite" parent="loading"]
position = Vector2( 510.619, 330.049 )
scale = Vector2( 2.191, 1 )
texture = ExtResource( 13 )

[node name="loading" type="AnimatedSprite" parent="loading"]
position = Vector2( 511.949, 326.483 )
frames = ExtResource( 30 )
animation = "loading"
frame = 18
playing = true
